# shotweb

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
config/: sample_config.json
doc/: design.txt  index.html
src/: CImg.h  CMakeLists.txt  Database.cc  Database.hh  Server.cc  Server.hh  ThreadStream.cc  ThreadStream.hh  Utility.cc  Utility.hh  app.cc  denied.html  event.html  event.js  events.html  events.js  login.css  login.html  login.js  phosha.cc  request.hpp  request_parser.hpp  server_http.hpp  shotweb.cc  test_database.cc  test_server.cc
src/static/: event.html  event.js  events.html  events.js  login.css  login.html  login.js  setup.html
